infra/k8s/extensions.controller.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: agent-sandbox-controller
  namespace: agent-sandbox-system
  labels:
    app: agent-sandbox-controller
spec:
  serviceName: agent-sandbox-controller
  replicas: 1
  selector:
    matchLabels:
      app: agent-sandbox-controller
  template:
    metadata:
      labels:
        app: agent-sandbox-controller
    spec:
      serviceAccountName: agent-sandbox-controller
      containers:
      - name: agent-sandbox-controller
        image: registry.k8s.io/agent-sandbox/agent-sandbox-controller:v0.1.0
        args:
        - "--extensions"
